SVG images are not supported via GPUQueue.copyExternalImageToTexture https://bugs.webkit.org/show_bug.cgi?id=296208 rdar://156219128

Reviewed by Tadeu Zagallo.

Add path for SVG images with zero changes to existing BitmapImage
path.

* Source/WebCore/Modules/WebGPU/GPUQueue.cpp:
(WebCore::imageBytesForSource):
* LayoutTests/fast/webgpu/regression/repro_296208-expected.txt: Added.
* LayoutTests/fast/webgpu/regression/repro_296208.html: Added.

Canonical link: https://commits.webkit.org/298758@main